The RecyclerView now works correctly. I added some color to the app and while it is quite garish right now it's a start. The core functionality of the app hasn't really changed other then the core loop that handles the lifetime of the bubbles is more robust.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,10 @@
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
     <string name="logs">Logs:</string>
-    <string name="bubble_environment">Bubble Environment:</string>
+    <string name="bubble_environment">Bubble Environment</string>
     <string name="global_enable_contact_phone_state_permissions">Please enable contact and read phone state permission</string>
     <string name="global_message_title">Message</string>
     <string name="global_call_screening_required_message">You have to select Call Screening app in the following dialog in order for app to work.</string>
     <string name="this_is_a_listview">This is a listview</string>
+    <string name="this_is_a_recycler_view">This is a Recycler View</string>
 </resources>
