Started working on the preferences fragment. Made the Reset button work, and implemented the base implementation for the changing time.
The contact feature is currently not implemented
in any form, More research is required in order
to both test and implement that feature.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="global_call_screening_required_message">You have to select Call Screening app in the following dialog in order for app to work.</string>
     <string name="this_is_a_listview">This is a listview</string>
     <string name="this_is_a_recycler_view">This is a Recycler View</string>
+    <string name="bubble_lifetime">Bubble Lifetime</string>
+    <string name="reset">Reset</string>
+    <string name="only_allow_contacts">Only Allow Contacts?</string>
+    <string name="change_time">Change Time</string>
 </resources>
